samples/kuard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kuard
  labels:
    pod-security.kubernetes.io/enforce: privileged
