samples/kuard/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kuard
  name: kuard
#  namespace: kuard
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: kuard
  sessionAffinity: None
  # type: NodePort
  type: LoadBalancer
